# ZipArchiver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_linux.sh  install_windows.bat
include/: Compressor.h
include/indicators/: termcolor.hpp
install/lib/cmake/libzip/: libzip-config.cmake  libzip-targets.cmake
install/lib/pkgconfig/: libzip.pc
src/: Compressor.cpp  main.cpp
